Bug 36316 - Tiles of selected content do not update if not in viewport
Summary: Tiles of selected content do not update if not in viewport
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Normal
Assignee: Nobody
URL:
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-03-18 12:21 PDT by Antonio Gomes
Modified: 2010-03-26 07:17 PDT (History)
4 users (show)

See Also:


Attachments
don't clip repaints to viewport when tiling is enabled (1.53 KB, patch)
2010-03-25 04:20 PDT, Antti Koivisto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Gomes 2010-03-18 12:21:44 PDT
Steps to reproduce (On QtLauncher)

1 - go to any URL that has enough content so that a selection with mouse can be long (i.e. bigger than the viewport), e.g. http://www.slashdot.org
2 - do a selection so that some selected content ends up offscreen.
3 - click anywhere in the page in order to de-select content.
4 - scroll in direction to the offscree content, previously selected.

Actual results:

- All tiled , including the ones selected but offscreen, updated.

Exctected results:

- After content is deselect, offscreen tiles do not get updated, and is still drawn as selected.
Comment 1 Simon Hausmann 2010-03-19 00:30:24 PDT
Isn't "Actual Results" and "Expected Results" reversed in your report, Antonio? :)
Comment 2 Antonio Gomes 2010-03-19 05:01:46 PDT
(In reply to comment #1)
> Isn't "Actual Results" and "Expected Results" reversed in your report, Antonio?
> :)

exactly. my bad
Comment 3 Antti Koivisto 2010-03-25 04:20:52 PDT
Created attachment 51628 [details]
don't clip repaints to viewport when tiling is enabled
Comment 4 WebKit Commit Bot 2010-03-25 06:02:17 PDT
Comment on attachment 51628 [details]
don't clip repaints to viewport when tiling is enabled

Clearing flags on attachment: 51628

Committed r56535: <http://trac.webkit.org/changeset/56535>
Comment 5 WebKit Commit Bot 2010-03-25 06:02:22 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Simon Hausmann 2010-03-26 07:17:41 PDT
Revision r56535 cherry-picked into qtwebkit-2.0 with commit 233463192d7a6a6166ed4798c7e311a53facc5a0