2010-03-25  Antti Koivisto  <koivisto@iki.fi>

Reviewed by Kenneth Rohde Christiansen.

        https://bugs.webkit.org/show_bug.cgi?id=36316
        Tiles of selected content do not update if not in viewport

        Don't clip repaints to viewport when tiling is enabled.

        * page/Frame.cpp:
        (WebCore::Frame::setView):
        (WebCore::Frame::setTiledBackingStoreEnabled):

Canonical link: https://commits.webkit.org/47829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56535 268f45cc-cd09-0410-ab3c-d52691b4dbfc